# agentic-trading

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.yml  pyproject.toml
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentCostWidget.tsx  AgentHitRateChart.tsx  BenchmarkChart.tsx  CircuitBreakerBanner.tsx  DecisionCard.tsx  DecisionsDatePicker.tsx  Nav.tsx  NavChart.tsx  PositionsTable.tsx  RefreshButton.tsx
dashboard/lib/: api.ts
infra/: main.tf  outputs.tf  variables.tf
logs/: .gitkeep
papers/: ai-driven-algorithmic-trading.md
trader/: daily_run.py  logging_config.py  main.py
trader/agents/: __init__.py  base.py  bull_bear.py  fundamentals.py  models.py  news_sentiment.py  portfolio_manager.py  technical.py
trader/api/: schemas.py
trader/config/: settings.py  tickers.py
trader/ingestion/: cache.py  corporate_actions.py  dedup.py  fii_dii.py  market_data.py  news.py  reddit.py
trader/ledger/: circuit_breaker.py  cost_model.py  paper_trade.py
trader/metrics/: benchmarks.py  performance.py
trader/model_cost/: __init__.py  calculator.py  fetcher.py  registry.py
trader/orchestration/: graph.py  runner.py  state.py
trader/prompts/: bull_bear.md  fundamentals.md  news_sentiment.md  portfolio_manager.md  system_shared.md  technical.md
trader/storage/: dynamo.py  s3.py
trader/tests/: test_agents.py  test_cost_model.py  test_ingestion.py  test_ledger.py  test_model_cost.py
(+19 files in other folders)
