[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nse-llm-trader"
version = "0.1.0"
description = "Multi-agent LLM paper-trading system for Indian equities (NSE)"
requires-python = ">=3.12"
dependencies = [
    # Data
    "jugaad-data>=2.4.0",
    "nselib>=0.0.5",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b0",
    "feedparser>=6.0.11",
    "praw>=7.7.1",
    "sentence-transformers>=3.0.0",
    # LLM & orchestration
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "langgraph>=1.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "boto3>=1.35.0",
    "redis>=5.0.8",
    "httpx>=0.27.0",
    "pytz>=2024.1",
    # Numerics
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["trader/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
